Fixed form display errors. Added error handling for form. Updated contact table to be associated with user table. Locked contact page behind logged in

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1019,11 +1019,14 @@ table.table td a {
   margin: 0 5px;
   min-width: 24px;
 }    
-table.table td a.add {
+table.table td a.save {
   color: #27C46B;
 }
 table.table td a.edit {
   color: #FFC107;
+}
+table.table td a.cancel {
+  color: #E34724;
 }
 table.table td a.delete {
   color: #E34724;
@@ -1031,7 +1034,7 @@ table.table td a.delete {
 table.table td i {
   font-size: 19px;
 }
-table.table td a.add i {
+table.table td a.save i {
   font-size: 24px;
   margin-right: -1px;
   position: relative;
@@ -1046,8 +1049,18 @@ table.table .form-control {
 table.table .form-control.error {
   border-color: #f50000;
 }
-table.table td .add {
-  display: none;
+tr.inputs td {
+  padding: 2px;
+}
+tr.inputs input {
+  margin: 4.5px;
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 1px solid #fff;
+}
+tr.inputs input:focus {
+  border-bottom: 1px solid #369;
 }
 
 
